# webhooks

client/: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.vite.json  vite.config.ts
client/.husky/: pre-commit
client/src/: index.css
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs
