[package]
name = "websockets-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["query", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
axum-macros = "0.5.0"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
