[package]
name = "websockets-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["query", "ws"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
